Sidebar Widget right alignment with text-align
Signed-off-by: Andreas_K <andreas_k@abwesend.de>
Change-Id: I6213fd2c35791bc368d802159a37cc0e89ec4bf3

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -50,6 +50,7 @@
 	font-size: calc(var(--default-font-size)*0.9);
 	font-weight: bold;
 	text-transform: uppercase;
+	text-align: left;
 }
 
 .lokdialog_container.ui-dialog.ui-widget-content, .autofilter-container {
