--- a/loleaflet/css/welcome.css
+++ b/loleaflet/css/welcome.css
@@ -11,7 +11,8 @@
 .iframe-welcome-modal {
 	height: 512px;
 	width: 700px;
-	box-shadow: 0 1px 10px 1px var(--color-border-dark);
+	-webkit-box-shadow: 0 0 3px var(--color-border);
+	box-shadow: 0 0 3px var(--color-box-shadow);
 	border-width: 0;
 	border-radius: var(--border-radius-large);
 	background-color: var(--color-main-background);
