--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -748,7 +748,7 @@ nav.drawing-color-indicator ~ #main-document-content .oxool-annotation-reply-cou
 
 .oxool-bar {
 	box-shadow: 0 1px 5px rgba(0,0,0,0.65);
-	border-radius: 4px;
+	border-radius: var(--border-radius);
 	display: inline-block;
 	margin: 3px;
 	vertical-align: middle;
@@ -772,13 +772,13 @@ nav.drawing-color-indicator ~ #main-document-content .oxool-annotation-reply-cou
 }
 
 .oxool-bar a:first-child {
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
+	border-top-left-radius: var(--border-radius);
+	border-top-right-radius: var(--border-radius);
 }
 
 .oxool-bar a:last-child {
-	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;
+	border-bottom-left-radius: var(--border-radius);
+	border-bottom-right-radius: var(--border-radius);
 	border-bottom: none;
 }
 
