--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -77,7 +77,7 @@
 
 .menubutton.sidebar span {
 	display: none;
-	font-size: calc(var(--default-font-size)*0.9);
+	font-size: var(--default-font-size);
 }
 
 .menubutton.sidebar:hover span {
