--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -13,7 +13,7 @@
 }
 
 .ui-tab.notebookbar {
-	font-size: calc(var(--default-font-size)*1.3);
+	font-size: var(--header-font-size);
 	font-family: var(--oxool-font);
 	line-height: normal;
 	color: #fff;
@@ -228,7 +228,7 @@
 }
 
 .unotoolbutton.notebookbar .unolabel {
-	font-size: calc(var(--default-font-size)*1.3);
+	font-size: var(--header-font-size);
 	font-family: var(--oxool-font);
 	color: var(--color-main-text);
 	padding: 0px 5px !important;
