Color Var: btns.css use var colors
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I7af79aeafd53039227d6aa8ad6f837c92b7f4a34

--- a/loleaflet/css/btns.css
+++ b/loleaflet/css/btns.css
@@ -97,9 +97,9 @@
 }
 
 .jsdialog.ui-button-box button[disabled='disabled'] {
-	color: var(--gray-light-txt--color) !important;
-	background-color: #fafafa !important;
-	border-color: #ccc !important;
+	color: var(--color-text-lighter) !important;
+	background-color: var(--color-background-lighter) !important;
+	border-color: var(--color-border-lighter) !important;
 }
 
 .ui-button-box .jsdialog.ui-pushbutton:not(.hidden) {
