--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -13,10 +13,13 @@
 #document-container:not(.mobile) + #sidebar-dock-wrapper {
 	width: 330px;
 	padding: 0;
-	border-left: 1px solid var(--color-border) !important;
-	border-right: 1px solid var(--color-border) !important; /* for RTL mode */
 	margin-top: 0 !important;
 	box-sizing: border-box;
+}
+
+[data-userinterfacemode='classic'] #document-container:not(.mobile) + #sidebar-dock-wrapper,
+#document-container.spreadsheet-doctype:not(.mobile) + #sidebar-dock-wrapper {
+	border-inline-start: 1px solid var(--color-border) !important;
 }
 
 .sidebar .spinfieldcontainer input {
