jsdialog: Accessibility check dialog fixes
- update pos on invalidate
- implement scrollwindow

Signed-off-by: Szymon Kłos <szymon.klos@collabora.com>
Change-Id: Ic1b133a8657abce1957a31e7c80c29ca7bf40976

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -113,6 +113,13 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 	width: 100%;
 }
 
+/* Scrollwindow - used eg. in accessibility check in writer */
+.jsdialog.ui-scrollwindow {
+	overflow: scroll;
+	max-height: 500px;
+	max-width: fit-content;
+}
+
 /* Tabs */
 .jsdialog-tabs {
 	display: inline-flex;
