jsdialog: Accessibility check dialog fixes for Firefox
Signed-off-by: Szymon Kłos <szymon.klos@collabora.com>
Change-Id: Icd169d74dca37e7e3b04bc7283f50d27cf9d4252

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -117,7 +117,12 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 .jsdialog.ui-scrollwindow {
 	overflow: scroll;
 	max-height: 500px;
-	max-width: fit-content;
+	max-width: 700px;
+}
+
+/* AccessibilityCheckDialog hack to prevent huge height in Firefox */
+#AccessibilityCheckDialog .cell {
+	vertical-align: unset !important;
 }
 
 /* Tabs */
