--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -34,7 +34,7 @@
 }
 
 .ui-tab.selected.notebookbar {
-	color: var(--color-text-dark);
+	color: var(--color-text-darker);
 	background: var(--color-background-dark);
 	border: 1px solid var(--color-border-dark);
 }
