Sidebar Global Layout update
Sidebar section header use
- header-font-size
- header-height

Sidebar section labels use
- default-font-size
- default-height

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I6011b686a5d72159b87db0f70c99d14001d73356

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -46,9 +46,14 @@
 	margin: 0px;
 	color: var(--color-main-text);
 	font-size: var(--default-font-size);
-	font-weight: bold;
-	text-transform: uppercase;
+	line-height: var(--default-height);
 	text-align: left;
+}
+#glowframe > div.ui-frame.jsdialog.sidebar > span,
+#softedgeframe > div.ui-frame.jsdialog.sidebar > span {
+	color: var(--color-main-text);
+	font-size: var(--header-font-size);
+	line-height: var(--header-height);
 }
 
 #accessibilityCheckBox .jsdialog.ui-text {
