Sidebar Left Text Alignment
Header Text and Section Text are left aligned
so each String start with the same space from the left
sidebar border

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I99841388f23bdb7f7493611c96689f3455999a5a

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -54,6 +54,7 @@
 	color: var(--color-main-text);
 	font-size: var(--header-font-size);
 	line-height: var(--header-height);
+	margin: 4px;
 }
 
 #accessibilityCheckBox .jsdialog.ui-text {
@@ -242,7 +243,7 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 }
 
 .ui-expander-content > .root-container.jsdialog {
-	margin: 4px 0px;
+	margin: 4px;
 }
 /* TreeView */
 
