--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -161,10 +161,12 @@
 	text-align: left;
 }
 
-#leftindent {
-	position: relative;
-	right: 16px;
+#ParaPropertyPanelPanelExpander #grid4 > tr:last-child {
+	display: flex;
+	justify-content: space-between;
+	width: 275px;
 }
+
 #orientationdegrees {
 	position: relative;
 	right: 21px;
@@ -378,15 +380,6 @@ td.jsdialog .jsdialog.cell.sidebar {
 	background: none !important;
 	width: auto;
 	height: auto;
-}
-
-#spacinglabel {
-	margin-top: -4px;
-}
-
-
-#indentlabel {
-	margin-top: 2px;
 }
 
 #table-fillattrhb {
