--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -143,6 +143,7 @@
 
 #ShadowPropertyPanel div#table-grid3 table#grid3 td:nth-child(1) {
 	justify-content: flex-start;
+	width: 294px;
 }
 
 #FIELD_TRANSPARENCY {
