--- a/loleaflet/css/device-mobile.css
+++ b/loleaflet/css/device-mobile.css
@@ -421,7 +421,7 @@ nav:not(.spreadsheet-color-indicator) ~ #toolbar-wrapper #toolbar-up.w2ui-toolba
 }
 #tb_actionbar_item_fullscreen{display: none;}
 #toolbar-down {
-	border-top: 1px solid var(--gray-color) !important;
+	border-top: 1px solid var(--color-border) !important;
 }
 #toolbar-down > .w2ui-scroll-wrapper {
 	overflow-x: scroll !important;
