Mobile use --color-primary instead of #0b87e7
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I95a4ddadd56b7aee97e2fbb8ba349aaca1bd4ed2

--- a/loleaflet/css/device-mobile.css
+++ b/loleaflet/css/device-mobile.css
@@ -70,7 +70,7 @@ input#follow-checkbox:checked ~ .checkmark:after {
 	display: block;
 }
 input#follow-checkbox:checked ~ .checkmark {
-	background-color: #0b87e7;
+	background-color: var(--color-primary);
 }
 #userlist_table + hr { display: none;}
 div#w2ui-overlay-actionbar.w2ui-overlay{
