--- a/loleaflet/css/color-palette.css
+++ b/loleaflet/css/color-palette.css
@@ -20,7 +20,7 @@
 	--color-background-lighter: #fff; /* toolbar, dialog, disabled */
 	--color-background-selected: #CCE8FF;
 
-	--color-primary: #1C99E0; /* border-color */
+	--color-primary: #0b87e7; /* border-color */
 	--color-primary-text: #fff; /* text color when primary-lighter is background */
 	--color-primary-dark: #0063b1;
 	--color-primary-darker: #004b86;
