Mobile Sidebar Commands use var colors for popup sidebar
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: Ia2322cbac5650b9ed36b6966b0d0037340e44032

--- a/loleaflet/css/device-mobile.css
+++ b/loleaflet/css/device-mobile.css
@@ -481,22 +481,22 @@ nav:not(.spreadsheet-color-indicator) ~ #toolbar-wrapper #toolbar-up.w2ui-toolba
 	margin: -1px 0px auto 3px !important;
 }
 #toolbar-up .checked{
-	border-color: #fff !important;
+	border-color: transparent !important;
 	background: none !important;
 	box-shadow: none;
 }
 #toolbar-up .checked .w2ui-tb-image, #toolbar-up .w2ui-tb-image:hover, #toolbar-up .w2ui-tb-image:focus, #toolbar-up .w2ui-tb-image:active, #toolbar-hamburger.menuwizard-closed:active{
-	-webkit-filter: drop-shadow(0px 0px 4px #0b87e7);
-	filter: drop-shadow(0px 0px 4px #0b87e7);
+	-webkit-filter: drop-shadow(0px 0px 4px var(--color-primary-darker));
+	filter: drop-shadow(0px 0px 4px var(--color-primary-darker));
 }
 #toolbar-up .over{
-	border-color: #fff !important;
+	border-color: transparent !important;
 	box-shadow: none !important;
 }
 #toolbar-up .over:hover .w2ui-tb-image, #toolbar-up .over:active .w2ui-tb-image{
-	-webkit-filter: drop-shadow(0px 0px 4px #0b87e7);
-	filter: drop-shadow(0px 0px 4px #0b87e7);
-	border-color: #fff transparent;
+	-webkit-filter: drop-shadow(0px 0px 4px var(--color-primary-darker));
+	filter: drop-shadow(0px 0px 4px var(--color-primary-darker));
+	border-color: transparent;
 }
 #toolbar-down table.w2ui-button .w2ui-tb-image {
 	margin: 5px 9px !important;
