Mobile combobox-text use var color
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: Ife66fc66872565eb5ca86a6986c96abc42ea3454

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -190,7 +190,7 @@ p.mobile-wizard.ui-combobox-text {
 	width: 100% !important;
 }
 p.mobile-wizard.ui-combobox-text:not(.selected) {
-	color: #333333 !important;
+	color: var(--color-main-text) !important;
 }
 
 p.mobile-wizard.ui-combobox-text.selected {
