--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -196,7 +196,7 @@ p.mobile-wizard.ui-combobox-text:not(.selected) {
 p.mobile-wizard.ui-combobox-text.selected {
 	background: url('images/lc_listitem-selected.svg') no-repeat right;
 	background-position-x: 94%;
-	color: #0867af !important;
+	color: var(--color-primary) !important;
 }
 #mobile-wizard-content {
 	overflow-y: hidden;
