Mobile Search use var colors and is vertical aligned
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I1e68d1d874b1d23820665abc1cadc76403092cad

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -1013,6 +1013,13 @@ label.disabled {
 	font-size: var(--default-font-size);
 }
 
+#toolbar-search {
+	background-color: var(--color-main-background);
+}
+.w2ui-toolbar table {
+	height: var(--header-height);
+}
+
 #criteria.ui-tab, #inputhelp.ui-tab {
 	width: 30% !important;
 }
