Mobile Sidebar unobutton.selected use var color
use the same var colors than for the desktop

Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: Ib95728312d00d1244859ccebbd635b8e9b5833d6

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -360,11 +360,9 @@ p.mobile-wizard.ui-combobox-text.selected {
 }
 
 #mobile-wizard .ui-content.unobutton.selected {
-	-webkit-filter: grayscale(0) brightness(90%) sepia(90%) hue-rotate(-179deg) saturate(800%) contrast(0.7);
-	filter: grayscale(0) brightness(90%) sepia(90%) hue-rotate(-179deg) saturate(800%) contrast(0.7);
-	box-shadow: 0 0 0px 8px #e6e6e640;
-	border-radius: 0.1px;
-	background-color: #e6e6e640;
+	box-shadow: 0 0 0px 8px var(--color-background-dark);
+	border-radius: var(--border-radius);
+	background-color: var(--color-background-dark);
 }
 
 .unotoolbutton.disabled, .mobile-wizard-widebutton.disabled {
