Mobile toolbar-down checked use var color
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: Iea1b5b5489861d1dff26beac3b279662de983119

--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -26,8 +26,8 @@
 #toolbar-down *:hover {
 	color: var(--color-text-darker);
 }
-#toolbar-down table {
-	background: var(--color-main-background);
+#toolbar-down:not(.mobile) {
+	background-color: var(--color-main-background);
 }
 #tb_actionbar_item_LanguageStatus table table td:first-of-type{
 	min-width: max-content !important;
