--- a/loleaflet/css/device-mobile.css
+++ b/loleaflet/css/device-mobile.css
@@ -216,12 +216,12 @@ div#w2ui-overlay-actionbar.w2ui-overlay{
 }
 
 .spreadsheet-tabs-container, #spreadsheet-toolbar{
-	background-color: #fff;
-	border-top: 1px solid #eceff4;
+	background-color: var(--color-main-background);
+	border-top: 1px solid var(--color-border);
 }
 #spreadsheet-toolbar{
-	background-color: #fbfbfb;
-	border-top: 1px solid #eceff4;
+	background-color: var(--color-main-background);
+	border-top: 1px solid var(--color-border);
 	height: 40px;
 	padding: 0;
 }
