--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -814,6 +814,7 @@ div#mobile-wizard-content .spinfieldcontainer .spinfieldimage.disabled {
 	line-height: 44px;
 	vertical-align: top;
 	padding-left: 4%;
+	font-size: var(--default-font-size);
 }
 #tsbshow.checkbutton {
 	display: table;
@@ -844,9 +845,9 @@ div#mobile-wizard-content .spinfieldcontainer .spinfieldimage.disabled {
 }
 #mobile-wizard input[type='checkbox']:checked{
 	background: url('images/lc_ok_white.svg') no-repeat center;
-	background-color: #0b87e7;
+	background-color: var(--color-primary-lighter);
 	border-radius: 2px;
-	border: 2px solid #0b87e7;
+	border: 2px solid var(--color-primary);
 	outline: none;
 	box-shadow: none;
 }
@@ -860,7 +861,7 @@ div#mobile-wizard-content .spinfieldcontainer .spinfieldimage.disabled {
 }
 
 #mobile-wizard input[type='radio']:disabled{
-	border: 2px solid #ddd;
+	border: 2px solid var(--color-border-lighter);
 	box-shadow: none;
 }
 #mobile-wizard input[type='radio']{
@@ -873,20 +874,20 @@ div#mobile-wizard-content .spinfieldcontainer .spinfieldimage.disabled {
 	-moz-appearance: none;
 	-o-appearance: none;
 	appearance: none;
-	border: 2px solid #aaa;
+	border: 2px solid var(--color-border);
 	outline: none;
 	box-shadow: #00000015 0px 0px 2px 1px;
 }
 #mobile-wizard input[type='radio']:checked{
 	background: url('images/lc_ok_white.svg') no-repeat center;
-	background-color: #0b87e7;
-	border: 2px solid #0b87e7;
+	background-color: var(--color-primary-lighter);
+	border: 2px solid var(--color-primary);
 	outline: none;
 	box-shadow: none;
 }
 #mobile-wizard input[type='radio']:checked:disabled{
-	background-color: #ddd !important;
-	border: 2px solid #ddd !important;
+	background-color: var(--color-border-lighter) !important;
+	border: 2px solid var(--color-border-lighter) !important;
 }
 #mobile-wizard input[type='radio']:before{
 	width: 20px;
