Mobile combobox use font-size var
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I4a44c775ee8fd0bbb55ed1b026ae22c37d3787c0

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -176,6 +176,7 @@ p.mobile-wizard.ui-combobox-text {
 	width: 96%;
 	vertical-align: middle;
 	line-height: 42px;
+	font-size: var(--default-font-size);
 	padding-left: 4%;
 }
 .menuwizard #mobile-wizard-content > div .ui-widget {
