--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -592,6 +592,14 @@ input.spinfield:disabled ~ .spinfieldcontrols *:active, input.spinfield:disabled
 	font-weight: normal;
 }
 
+input.ui-edit.mobile-wizard {
+	background-color: var(--color-background-lighter);
+	color: var(--color-text-lighter);
+	border: 1px solid var(--color-border-dark);
+	border-radius: var(--border-radius);
+	height: 32px;
+}
+
 /*insert table special layout*/
 .inserttablecontrols p.ui-text{
 	margin-left: 14%;
