--- a/loleaflet/css/iframedialog.css
+++ b/loleaflet/css/iframedialog.css
@@ -12,6 +12,6 @@
 	box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.15), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.15), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
 	-webkit-box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.15), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
-	border-radius: 3px;
+	border-radius: var(--border-radius);
 	background: white;
 }
