--- a/loleaflet/css/leaflet.css
+++ b/loleaflet/css/leaflet.css
@@ -323,7 +323,7 @@ a.leaflet-control-buttons,
 a.leaflet-control-buttons:hover {
 	box-shadow: 0 1px 5px rgba(0,0,0,0.4);
 	background: #fff;
-	border-radius: 5px;
+	border-radius: var(--border-radius);
 	width: 24px;
 	height: 24px;
 	float: left;
@@ -359,7 +359,7 @@ a.leaflet-control-buttons:hover:first-child {
 .leaflet-control-layers {
 	box-shadow: 0 1px 5px rgba(0,0,0,0.4);
 	background: #fff;
-	border-radius: 5px;
+	border-radius: var(--border-radius);
 }
 .leaflet-control-layers-toggle {
 	background-image: url('images/layers.png');
@@ -775,7 +775,7 @@ textarea.clipboard.overspot {
 	background: #ebebeb;
 	border-left: 1px solid transparent;
 	border-right: 1px solid transparent;
-	border-radius: 4px;
+	border-radius: var(--border-radius);
 	height: 14px;
 	margin: 5px 0 0;
 }
@@ -789,7 +789,7 @@ textarea.clipboard.overspot {
 	background: #5c3dcc;
 	border: 1px solid;
 	border-color: #4422bf #5435c4;
-	border-radius: 4px;
+	border-radius: var(--border-radius);
 	background-image: -webkit-linear-gradient(top, #745dc6, #6549cc 70%, #5c3dcc);
 	background-image: -moz-linear-gradient(top, #745dc6, #6549cc 70%, #5c3dcc);
 	background-image: -o-linear-gradient(top, #745dc6, #6549cc 70%, #5c3dcc);
