--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -461,7 +461,7 @@ li .disabled .keyboard {
 	right: 0px;
 	bottom: 0px;
 	z-index: 2;
-	border-radius: 4px;
+	border-radius: var(--border-radius);
 	text-align: right;
 	margin-right: 4%;
 	overflow: hidden;
