--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -243,7 +243,7 @@
 }
 
 .unotoolbutton.notebookbar:hover .unoarrow {
-	border-top: 5px solid var(--gray-light-txt--color);
+	border-top: 5px solid var(--color-border-darker);
 }
 
 #table-HomeTab .unospan-uptoolbar:not(.disabled) {
