vex dialog close button is bigger and easier to grap
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: Iac201d815782d96cab872a9415218c8a5c384ed4

--- a/loleaflet/css/override-vex.css
+++ b/loleaflet/css/override-vex.css
@@ -127,9 +127,18 @@
 }
 
 .vex.vex-theme-plain .vex-close:before {
-	width: 32px;
-	height: 32px;
-	line-height: 32px;
+	color: var(--color-main-text);
+	border: 1px solid transparent;
+	border-radius: 50%;
+	width: 48px;
+	height: 48px;
+	line-height: 48px;
+	font-size: 36px;
+}
+.vex.vex-theme-plain:hover .vex-close:hover:before {
+	color: var(--color-text-darker);
+	background-color: var(--color-background-darker);
+	border: 1px solid var(--color-border-darker);
 }
 
 #about-dialog {
