--- a/loleaflet/css/override-vex.css
+++ b/loleaflet/css/override-vex.css
@@ -111,7 +111,7 @@
 }
 
 .vex.vex-theme-plain .vex-content{
-	box-shadow: 0 1px 10px 1px var(--color-border-dark);
+	box-shadow: 0 1px 10px 1px var(--color-box-shadow);
 	border-radius: var(--border-radius-large);
 	background-color: var(--color-main-background);
 	outline: none;
