--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -1153,6 +1153,8 @@ html[dir='rtl'] #userListPopover::after {
 	background-color: transparent;
 }
 
+.w2ui-toolbar table.w2ui-button.checked .w2ui-tb-caption,
 .w2ui-reset table tr th, .w2ui-reset table tr td {
 	font-size: var(--default-font-size);
+	color: var(--color-main-text);
 }
