Mobile textarea annotation use var colors
Signed-off-by: andreas kainz <kainz.a@gmail.com>
Change-Id: I6f8850eb6542cd8a813dffafeabdf072bbbbd550

--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -617,8 +617,8 @@ nav.drawing-color-indicator ~ #main-document-content .oxool-annotation-reply-cou
 .oxool-annotation-textarea {
 	font-family: var(--oxool-font) !important;
 	font-size: var(--default-font-size);
-	border: 1px solid #c8c8c8;
-	background-color: white;
+	border: 1px solid var(--color-border);
+	background-color: var(--color-background-dark);
 	overflow-x: hidden;
 	height: 50px;
 	width: 100%;
