--- a/loleaflet/css/impress-mobile.css
+++ b/loleaflet/css/impress-mobile.css
@@ -1,8 +1,8 @@
 .slide-master-mode > .leaflet-container{
-	background-color: #c2d5ed;
-	box-shadow: inset 0px 0px 5px 0px #4a96d3;
+	background-color: var(--color-primary-lighter);
+	box-shadow: inset 0px 0px 5px 0px var(--color-primary);
 }
 
 #presentation-controls-wrapper {
-	border-top: 1px solid var(--color-border) !important;
+	border-top: 1px solid var(--color-border);
 }
